# Infop

./: app.py  database.py  pyproject.toml  replit.md
attached_assets/: Pasted-Desarrollar-una-aplicaci-n-web-usando-Python-con-Streamlit-que-permita-cargar-archivos-Excel-xlsx--1747885540948.txt
components/: ai_analysis.py  dashboard.py  file_uploader.py  report_generator.py
components/components/: dashboard.py  data_filter.py  report_generator.py  report_storage.py
