[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "components>=0.0.1a0",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "pickle-mixin>=1.0.2",
    "plotly>=6.1.1",
    "psycopg2-binary>=2.9.10",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "weasyprint>=65.1",
    "xlrd>=2.0.1",
    "xlsxwriter>=3.2.3",
]
